--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/compiled/newsfeed.js"
+    <script src="cljs-out/newsfeed-main.js"
             type="text/javascript"></script>
   </body>
 </html>
